# pyqual

./: .aider.chat.history.md  .aider.input.history  .gitignore  .gitlab-ci.yml  11-devloop.md  11-pyqual.md  BENCHMARK.md  CHANGELOG.md  Makefile  README.md  REQUEST_ADD_FILES.txt  REQUEST_EDIT_FILES.txt  REQUEST_FOR_FILES.md  SUGGESTED_COMMANDS.sh  SUMD.md  SUMR.json  SUMR.md  TODO.md  TODO_mock.md  Taskfile.yml  app.doql.css  app.doql.less  benchmark.py  cli.py  config.py  conftest.py  devloop.yml  gates.py  goal.yaml  index.html  integrations.planfile.yaml  pipeline.py  planfile.yaml  project.planfile.yaml  project.sh  pyproject.toml  pyqual.code-workspace  pyqual.yaml  run_analysis.py  sumd.json  (+5 more)
.assistant/: REQUEST_ADD_FILES.md
.github/: dependabot.yml
.github/workflows/: dependencies.yml  pyqual-ci.yml  pyqual-enhanced.yml  pyqual.yml  trigger-org-sync.yml
.planfile_analysis/: analysis_summary.json
.pyqual/: coverage.json  errors.json  llx_history.jsonl  llx_mcp.json  pipeline.db  validation.json  validation.toon.yaml  validation.txt
.taskill/: state.json
In the class/: method where the magic number appears (around line 15):
PATCH_REQUEST/: REQUEST_FILES.txt
code2llm_output/: README.md  analysis.toon.yaml  context.md  evolution.toon.yaml
dashboard/: README.md  constants.py  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
dashboard/api/: main.py
dashboard/config/: repos.example.json
dashboard/src/: App.css  App.tsx
dashboard/test/: pyqual-dashboard.test.js
docs/: README.md  ai-fix-tools.md  api.md  ci-dashboard-integration.md  configuration.md  index.md  integrations.md  logs-and-data.md  quickstart.md  runtime-errors.md
examples/: README.md  integration_example.py
examples/basic/: README.md  check_gates.py  minimal.py  pyqual.yaml  run_pipeline.py  sync_if_fail.py
examples/custom_gates/: README.md  composite_gates.py  composite_simple.py  custom_metric.py  dynamic_thresholds.py  metric_history.py  pyqual.yaml
examples/custom_plugins/: README.md  code_health_collector.py  performance_collector.py  pyqual.yaml
examples/github-actions/: README.md  quality-gates.yml
examples/gitlab-ci/: README.md
examples/linters/: README.md  pyqual.linters.yaml  pyqual.yaml
examples/llm_fix/: Dockerfile  README.md  docker-compose.yml  fix_code.py  fix_in_pipeline.py  pyqual.yaml  simple_prompt.py
examples/llx/: README.md  demo.sh  pyqual-llx.yaml
examples/monorepo/: README.md
examples/multi_gate_pipeline/: README.md  TODO.md  pyqual.yaml  run_pipeline.py
examples/project_analysis/: pyqual.yaml
examples/python-flat/: README.md
examples/python-package/: README.md  pyproject.toml
integration/: run_docker_matrix.sh  run_matrix.sh
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  mermaid.export  project.toon.yaml  prompt.txt  validation.toon.yaml
project/root/: context.md  (+2 more)
pyqual/: __init__.py  __main__.py  _gate_collectors.py  _plugin_base.py  analysis.py  api.py  auto_closer.py  builtin_collectors.py  bulk_init.py  bulk_init_classify.py  bulk_init_fingerprint.py  bulk_run.py  bulk_run.py.bak  cli.py  cli_bulk_cmds.py  cli_log_helpers.py  cli_observe.py  cli_plugin_helpers.py  cli_run_helpers.py  command.py  config.py  config.py.bak  constants.py  custom_fix.py  default_tools.json  documentation.py  gates.py  github_actions.py  github_tasks.py  llm.py  output.py  parallel.py  pipeline.py  pipeline_protocols.py  pipeline_results.py  plugins.py  profiles.py  release_check.py  report.py  report_generator.py  (+7 more)
testql-scenarios/: generated-api-smoke.testql.toon.yaml  generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: __init__.py  __init__.py.bak  config_test.py  pipeline_test.py  report_helpers.py  test_bulk_init.py  test_bulk_run.py  test_cli_run_helpers.py  test_collectors.py  test_config.py  test_devloop.py  test_github_actions.py  test_llx_mcp.py  test_pipeline.py  test_pipeline_stages.py  test_profiles.py  test_profiles_module.py  test_pyqual.py  test_release_validation.py  test_report.py  test_report_badges.py  test_report_badges.py.bak  test_report_collect.py  test_report_generate.py  test_report_generate.py.bak  test_report_helpers.py  test_report_metrics.py  test_report_project_badges.py  test_report_quality_badges.py  test_report_readme.py  test_report_readme.py.bak  test_runtime_errors.py  test_secrets_collector.py  test_tickets.py  test_validation.py  utils_test.py
(+162 files in other folders)
